# protobuf_cpp_examples

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  UDP_socket.cpp  UDP_socket.h  main.cpp
ackd_udp_example/: client.cpp  client.h  common.h  datagram.proto  server.cpp  server.h
advanced_example/: client.cpp  client.h  common.h  requests.proto  server.cpp  server.h
message_proto_example/: client.cpp  client.h  message.proto  server.cpp  server.h
message_struct_example/: client.cpp  client.h  message.h  server.cpp  server.h
